--- a/pvdv5-v2/res/config.json
+++ b/pvdv5-v2/res/config.json
@@ -5,6 +5,7 @@
                 {
                     "selected_alg":"pvd_c4",
                     "pvd_c4": {
+                        "channel_id":1,
                         "step":2,
                         "ratio":"0.8",
                         "detect_area": [
